# ticket-to-ride

./: .gitattributes  README.md
backend/: .gitignore  README.md  game-state.json
backend/ticket-to-ride/: Cargo.toml  README.md
backend/ticket-to-ride/src/: card.rs  city.rs  game_phase.rs  game_state.rs  lib.rs  manager.rs  map.rs  player.rs  train_color.rs
backend/web-server/: Cargo.toml  README.md
backend/web-server/src/: authenticator.rs  controller.rs  main.rs  request_types.rs  response_types.rs  router.rs  router_tests.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.tsx  Game.tsx  index.tsx  landingPage.tsx
frontend/src/CSS/: App.css  ColorPicker.css  Game.css  LandingPage.css  Lobby.css  Lobby.css.map  Lobby.scss  Main.css  NameForm.css  PlayerCustom.css  PlayerCustom.css.map  PlayerCustom.scss  PlayerInfoBlock.css  PlayerPlaceHolder.css  Starting.css  TrainAnimation.css  index.css
frontend/src/Components/: App.styles.tsx  App.tsx  ColorPicker.styles.tsx  ColorPicker.tsx  CreateGame.tsx  Game.styles.tsx  Game.tsx  LandingPage.styles.tsx  LandingPage.tsx  Lobby.styles.tsx  Lobby.tsx  Main.styles.tsx  Main.tsx  Map.tsx  NameForm.tsx  PlayerCustom.styles.tsx  PlayerCustom.tsx  PlayerInfoBlock.styles.tsx  PlayerInfoBlock.tsx  PlayerPlaceHolder.styles.tsx  PlayerPlaceHolder.tsx  Starting.styles.tsx  Starting.tsx  TrainAnimation.tsx  svg.tsx
frontend/src/GameState/: CardDealerState.tsx  City.tsx  CityToCity.tsx  ClaimedRoute.tsx  DestinationCards.tsx  GamePhase.tsx  GameState.tsx  PlayerAction.tsx  (+6 more)
(+3 files in other folders)
