[package]
name = "ticket-to-ride"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
smallvec = {version = "1.8", features = ["serde"]}
rand = "0.8"
array-init = "2.0"
threadpool = "1.8"
lazy_static = "1.4"
atom = "0.4"