[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["uuid", "secrets", "json"]}
uuid = {version = "1.1", features = ["v4", "fast-rng"]}
dashmap = "5.3"
parse-display = "0.5"
ticket-to-ride = {path = "../ticket-to-ride"}